--- a/assets/css/style-custom.css
+++ b/assets/css/style-custom.css
@@ -7,19 +7,19 @@
     box-sizing: border-box;
 }
 .container {
-    max-width: 1400px;
+    max-width: 1200px;
 }
 h1 {
     font-size: 52px;
-    font-weight: 400;
+    font-weight: 600;
 }
 h2 {
     font-size: 36px;
-    font-weight: 400;
+    font-weight: 600;
 }
 h3 {
     font-size: 28px;
-    font-weight: 400;
+    font-weight: 500;
 }
 h4 {
     font-size: 24px;
@@ -35,6 +35,15 @@ h6 {
 }
 p {
     font-size: 16px;
+    color: #434343;
+}
+.text-green {
+    color: #259e90;
+}
+.text-yellow {
+    color: #eeba3f;
+}
+.text-black {
     color: #434343;
 }
 a.navbar-brand {
@@ -58,12 +67,10 @@ a.navbar-brand {
     color: #259e90;
 }
 h2.intro-name {
-    font-weight: 600;
     color: #eeba3f; 
 }
 h1.txt-type {
     color: #434343;
-    font-weight: 600;
 }
 .intro-left-col {
     display: flex;
@@ -77,7 +84,6 @@ h1.txt-type {
 }
 .btn-main {
     color: #fff;
-    background: rgb(87,176,171);
     background: linear-gradient(90deg, rgba(87,176,171,1) 0%, rgba(37,158,144,1) 100%);
     border: none;
     border-radius: 25px;
@@ -86,7 +92,6 @@ h1.txt-type {
 }
 .btn-second {
     color: #fff;
-    background: rgb(252,177,0);
     background: linear-gradient(90deg, rgba(252,177,0,1) 0%, rgba(238,186,63,1) 100%);
     border: none;
     border-radius: 25px;
@@ -95,6 +100,13 @@ h1.txt-type {
 .btn-main:hover, .btn-second:hover {
     color: #fff;
     opacity: .8;
+}
+a.about-me-more {
+    color: #eeba3f;
+    font-weight: 600;
+    font-size: 20px;
+    text-decoration: none;
+    padding: 0 30px;
 }
 li {
     list-style: none;
@@ -126,6 +138,12 @@ img.intro-img {
     border-radius: 20px;
     border: none;
 }
+.block-card :hover {
+    transform: scale(1.08);
+}
+.block-card .card .card-body .card-title :hover {
+    transform: none;
+}
 .card-title {
     text-align: center;
     padding: 15px 0 0 0;
@@ -133,10 +151,21 @@ img.intro-img {
 .owl-nav, .owl-dots {
     display: none;
 }
-h3.card-title {
+h5.card-title {
     color: #259e90;
     font-weight: 500;
 }
-h3.card-title:hover {
+/* h5.card-title:hover {
     color: #eeba3f;
+} */
+.underline {
+    margin: 15px 0;
+    width: 100px;
+    height: 10px;
+    border-radius: 25px;
+    background: linear-gradient(90deg, rgba(252,177,0,1) 0%, rgba(238,186,63,1) 100%);
+}
+.work-ex {
+    margin: 10px 0;
+    padding: 10px 0;
 }
