--- a/assets/css/style-custom.css
+++ b/assets/css/style-custom.css
@@ -38,13 +38,17 @@ p {
     color: #434343;
 }
 .text-green {
-    color: #259e90;
+    color: #1DA599;
 }
 .text-yellow {
-    color: #eeba3f;
+    color: #FEC748;
 }
 .text-black {
     color: #434343;
+}
+.text-second {
+    color: #434343;
+    opacity: .6;
 }
 a.navbar-brand {
     color: #434343;
@@ -64,10 +68,10 @@ a.navbar-brand {
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
 .nav-link:hover, .nav-link:focus, .nav-link.active {
-    color: #259e90;
+    color: #1DA599;
 }
 h2.intro-name {
-    color: #eeba3f; 
+    color: #FEC748; 
 }
 h1.txt-type {
     color: #434343;
@@ -102,7 +106,7 @@ h1.txt-type {
     opacity: .8;
 }
 a.about-me-more {
-    color: #eeba3f;
+    color: #FEC748;
     font-weight: 600;
     font-size: 20px;
     text-decoration: none;
@@ -152,11 +156,11 @@ img.intro-img {
     display: none;
 }
 h5.card-title {
-    color: #259e90;
+    color: #1DA599;
     font-weight: 500;
 }
 /* h5.card-title:hover {
-    color: #eeba3f;
+    color: #FEC748;
 } */
 .underline {
     margin: 15px 0;
@@ -166,6 +170,175 @@ h5.card-title {
     background: linear-gradient(90deg, rgba(252,177,0,1) 0%, rgba(238,186,63,1) 100%);
 }
 .work-ex {
-    margin: 10px 0;
-    padding: 10px 0;
+    margin: 40px 0;
+}
+.border-rd-main {
+    border-radius: 20px;
+}
+.carousel-indicators [data-bs-target] {
+    border: 1px transparent solid;
+    border-radius: 20px;
+    width: 20px;
+    height: 5px;
+    background-color: #FEC748;
+    opacity: .4;
+}
+.carousel-indicators .active {
+    width: 40px;
+    height: 5px;
+    opacity: 1;
+}
+.nav-pills .show > .nav-link {
+    color: #fff;
+    background-color: #1DA599;
+    border-radius: 30px;
+    padding: 10px 30px;
+    box-shadow: 15px 15px 20px 0px rgba(37,158,144,0.2);
+}
+.nav-pills .nav-link.active {
+    color: #fff;
+    background-color: #1DA599;
+    border-radius: 30px;
+    box-shadow: 15px 15px 20px 0px rgba(37,158,144,0.2);
+}
+.card-graphic {
+    width: 230px;
+    height: 230px;
+    background-color: #fff;
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+    border-radius: 20px;
+    border: none;
+    margin: 10px 0  ;
+}
+.card-graphic img {
+    width: 230px;
+    height: 230px;
+    border-radius: 20px;
+}
+.card-activities {
+    height: 230px;
+    background-color: #fff;
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+    border-radius: 20px;
+    border: none;
+    margin: 10px 0  ;
+}
+.card-activities img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+/* ======================================= */
+.snip1401 {
+    position: relative;
+    overflow: hidden;
+    margin: 10px;
+    min-width: 230px;
+    max-width: 315px;
+    max-height: 220px;
+    width: 100%;
+    color: #000000;
+    text-align: right;
+    font-size: 16px;
+    background-color: #000000;
+    border-radius: 20px;
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+}
+
+.snip1401 * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all 0.35s ease;
+    transition: all 0.35s ease;
+}
+
+.snip1401 img {
+    max-width: 100%;
+    /* backface-visibility: hidden; */
+}
+
+.snip1401 figcaption {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+    opacity: 1;
+    padding: 30px 0 30px 10px;
+    background-color: #ffffff;
+    width: 40%;
+    -webkit-transform: translateX(150%);
+    transform: translateX(150%);
+}
+
+.snip1401 figcaption:before {
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    right: 100%;
+    content: '';
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 120px 120px 120px 0;
+    border-color: transparent #ffffff transparent transparent;
+}
+
+.snip1401:after {
+    position: absolute;
+    bottom: 50%;
+    right: 40%;
+    content: '';
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 120px 120px 0 120px;
+    border-color: rgba(255, 255, 255, 0.5) transparent transparent transparent;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    -webkit-transition: all 0.35s ease;
+    transition: all 0.35s ease;
+}
+
+.snip1401 p {
+    line-height: 1.5em;
+    -webkit-transform: translateX(-30px);
+    transform: translateX(-30px);
+    margin: 0;
+}
+
+.snip1401 p {
+    font-size: 1em;
+}
+
+.snip1401:hover img,
+.snip1401.hover img {
+    zoom: 1;
+    filter: alpha(opacity=50);
+    -webkit-opacity: 0.5;
+    opacity: 0.5;
+}
+
+.snip1401:hover:after,
+.snip1401.hover:after,
+.snip1401:hover figcaption,
+.snip1401.hover figcaption,
+.snip1401:hover i,
+.snip1401.hover i {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+}
+/* ======================================= */
+
+.bg-text-main {
+    color: #fff;
+    background: linear-gradient(90deg, rgba(87,176,171,1) 0%, rgba(37,158,144,1) 100%);
+    border: none;
+    border-radius: 25px;
+    padding: 10px 10px;
+    margin: auto 150px;
 }
